@@ -1,3 +1,10 @@
+2001-09-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* stor-layout.c (layout_type) [ARRAY_TYPE]: Copy elements
+	TYPE_USER_ALIGN.
+
+	* loop.c (express_from_1): Fix CONSTANT_P(a) case.
+
 2001-09-04  Richard Henderson  <rth@redhat.com>
 
 	* unwind.h (_UA_END_OF_STACK): New flag.
